docs: Phase 4 — Developer onboarding overhaul, 30-second quickstarts, SDK guides, and cloud deployment documentation (#779)
* docs(site): add typescript sdk, deployment guides, and synchronize roadmap

- Add comprehensive TypeScript SDK documentation covering cognitive verbs, SSE, and runtimes
- Modernize Python SDK guide with spector-client details, sync/async APIs, and SSE
- Add deployment guides for Docker Compose (profiles), Kubernetes Helm, and Terraform multi-cloud
- Update getting started and installation guides with 30s paths, NPX, brew, scoop, and curl
- Synchronize MkDocs navigation and mark Phases 1-3 completed in docs/roadmap.md

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>

* docs(readme): overhaul hero with 30s quickstarts, agent configs, and plain-english licensing

- Feature 30-second onboarding snippets at the top: NPX, Python, TypeScript, Docker, curl/irm
- Add copy-pasteable MCP configs for Claude Desktop, Cursor, Windsurf, and Claude Code
- Add new badges for PyPI, npm (@spectrayan/spector-client), Docker GHCR, and Java 25
- Demarcate building from source for engine contributors
- Add plain-English licensing callout clarifying free developer usage and Apache 2.0 clients

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>

* fix(cli): resolve adoption review items across CLI, SDKs, deployments, and docs

- Rename user-facing CLI to spector with serve and doctor subcommands
- Require OpenJDK 25+ across NPX launcher, installers, and Homebrew formula
- Harden SHA-256 verification and honest dry-run in POSIX and PS1 scripts
- Standardize container runtime on glibc Temurin 25 JRE, UID 1000, and /data volume
- Correct Helm templates, probes, serviceaccount, and port 8080 mapping
- Support wrapped recall payloads and add HTTP contract tests in Python and TS SDKs
- Add release-binaries workflow for spector.jar and spector.jar.sha256
- Add Python LangChain and TypeScript Vercel AI SDK adapter examples
- Align documentation and eliminate